--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://unpkg.com/@changesets/config@3.0.0/schema.json",
-    "changelog": ["@changesets/changelog-github", { "repo": "RadiusProxy/Radius" }],
+    "changelog": ["@changesets/changelog-github", { "repo": "sriail/Novabrowser" }],
     "commit": false,
     "fixed": [],
     "linked": [],
